# compare_csv

./: MANIFEST.in  README.md  b_small.csv  compare_csv.py  compare_csv.spec  debug_excel.py  pyproject.toml  sample_usage.py
compare/: diff_deleted.csv  diff_inserted.csv  diff_updated.csv
compare_csv.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
