[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-csv"
version = "0.1.0"
description = "Compare two CSV files and export differences using database-style operations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.0"
]

[project.urls]
"Homepage" = "https://example.com/compare-csv"

[project.scripts]
compare-csv = "compare_csv:main"

[tool.setuptools]
py-modules = ["compare_csv"]
